--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
   <section>
     <div class="card">
       <h2>Resumen General</h2>
-      <p><strong>TENANT MORENA:</strong> 10,842 tabletas activas</p>
-      <p><strong>TENANT REFERENTES:</strong> 8,495 tabletas activas</p>
+      <p><strong>TENANT MORENA:</strong> 7,575 tabletas activas enroladas</p>
+      <p><strong>TENANT REFERENTES:</strong> 20,442 tabletas activas enroladas</p>
     </div>
 
     <div class="card">
