--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Dashboard Nacional de Tabletización</title>
+  <title>Dashboard Nacional de Ubicacióon de Tabletas Estructura MORENA</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body { font-family: 'Segoe UI', sans-serif; margin: 0; background-color: #f9f9f9; padding: 20px; color: #333; }
@@ -21,7 +21,7 @@
 <body>
 <header>
   <h1>Dashboard Nacional de Tabletización</h1>
-  <p>Movimiento de Regeneración Nacional (MORENA)</p>
+  <p>Tabletas para Afiliación SÚMATE del TENANT MORENA</p>
 </header>
 <section>
   <div class="card">
@@ -31,7 +31,7 @@
   </div>
 
   <div class="card">
-    <h2>Consulta de Mapas por Estado</h2>
+    <h2>Consulta de Mapas de Tabletas conectadas por Estado</h2>
     <ul>
       <li><a href="Mapa_Aguascalientes.html" target="_blank">Aguascalientes</a></li>
       <li><a href="Mapa_Baja_California.html" target="_blank">Baja California</a></li>
