--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </div>
 
   <div class="card">
-    <h2>Consulta de Mapas de Tabletas conectadas por Estado</h2>
+    <h2>Mapas de Ubicación de Tabletas conectadas por Estado (ESTRUCTURA MORENA)</h2>
     <ul>
       <li><a href="Mapa_Aguascalientes.html" target="_blank">Aguascalientes</a></li>
       <li><a href="Mapa_Baja_California.html" target="_blank">Baja California</a></li>
