--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Dashboard Nacional de Ubicacióon de Tabletas Estructura MORENA</title>
+  <title>Dashboard Nacional de Tabletización</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body { font-family: 'Segoe UI', sans-serif; margin: 0; background-color: #f9f9f9; padding: 20px; color: #333; }
-    header { text-align: center; padding: 30px 0; background-color: #7a1f1f; color: white; }
-    section { max-width: 900px; margin: auto; }
-    .card { background-color: white; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); padding: 20px; margin: 20px 0; }
-    h1, h2 { color: #7a1f1f; }
+    body { font-family: 'Segoe UI', sans-serif; background-color: #f9f9f9; padding: 20px; }
+    header { text-align: center; background-color: #7a1f1f; color: white; padding: 30px 0; }
+    section { max-width: 960px; margin: auto; }
+    .card { background: white; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); padding: 20px; margin: 20px 0; }
+    h1, h2, h3 { color: #7a1f1f; }
     ul { list-style: none; padding-left: 0; column-count: 2; }
     li { margin-bottom: 8px; }
     a { text-decoration: none; color: #0066cc; }
@@ -21,7 +21,7 @@
 <body>
 <header>
   <h1>Dashboard Nacional de Tabletización</h1>
-  <p>Tabletas para Afiliación SÚMATE del TENANT MORENA</p>
+  <p>Movimiento de Regeneración Nacional (MORENA)</p>
 </header>
 <section>
   <div class="card">
@@ -31,43 +31,51 @@
   </div>
 
   <div class="card">
-    <h2>Ubicación de Tabletas conectadas por Estado (ESTRUCTURA MORENA)</h2>
-    <ul>
-      <li><a href="Mapa_Aguascalientes.html" target="_blank">Aguascalientes</a></li>
-      <li><a href="Mapa_Baja_California.html" target="_blank">Baja California</a></li>
-      <li><a href="Mapa_Baja_California_Sur.html" target="_blank">Baja California Sur</a></li>
-      <li><a href="Mapa_Campeche.html" target="_blank">Campeche</a></li>
-      <li><a href="Mapa_Chiapas.html" target="_blank">Chiapas</a></li>
-      <li><a href="Mapa_Chihuahua.html" target="_blank">Chihuahua</a></li>
-      <li><a href="Mapa_Ciudad_de_México.html" target="_blank">Ciudad de México</a></li>
-      <li><a href="Mapa_Coahuila.html" target="_blank">Coahuila</a></li>
-      <li><a href="Mapa_Colima.html" target="_blank">Colima</a></li>
-      <li><a href="Mapa_Durango.html" target="_blank">Durango</a></li>
-      <li><a href="Mapa_Estado_de_México.html" target="_blank">Estado de México</a></li>
-      <li><a href="Mapa_Guanajuato.html" target="_blank">Guanajuato</a></li>
-      <li><a href="Mapa_Guerrero.html" target="_blank">Guerrero</a></li>
-      <li><a href="Mapa_Hidalgo.html" target="_blank">Hidalgo</a></li>
-      <li><a href="Mapa_Jalisco.html" target="_blank">Jalisco</a></li>
-      <li><a href="Mapa_Michoacán.html" target="_blank">Michoacán</a></li>
-      <li><a href="Mapa_Morelos.html" target="_blank">Morelos</a></li>
-      <li><a href="Mapa_Nayarit.html" target="_blank">Nayarit</a></li>
-      <li><a href="Mapa_Nuevo_León.html" target="_blank">Nuevo León</a></li>
-      <li><a href="Mapa_Nuevo_México.html" target="_blank">Nuevo México</a></li>
-      <li><a href="Mapa_Oaxaca.html" target="_blank">Oaxaca</a></li>
-      <li><a href="Mapa_Puebla.html" target="_blank">Puebla</a></li>
-      <li><a href="Mapa_Querétaro.html" target="_blank">Querétaro</a></li>
-      <li><a href="Mapa_Quintana_Roo.html" target="_blank">Quintana Roo</a></li>
-      <li><a href="Mapa_San_Luis_Potosí.html" target="_blank">San Luis Potosí</a></li>
-      <li><a href="Mapa_Sinaloa.html" target="_blank">Sinaloa</a></li>
-      <li><a href="Mapa_Sonora.html" target="_blank">Sonora</a></li>
-      <li><a href="Mapa_Tabasco.html" target="_blank">Tabasco</a></li>
-      <li><a href="Mapa_Tamaulipas.html" target="_blank">Tamaulipas</a></li>
-      <li><a href="Mapa_Texas.html" target="_blank">Texas</a></li>
-      <li><a href="Mapa_Tlaxcala.html" target="_blank">Tlaxcala</a></li>
-      <li><a href="Mapa_Veracruz.html" target="_blank">Veracruz</a></li>
-      <li><a href="Mapa_Yucatán.html" target="_blank">Yucatán</a></li>
-      <li><a href="Mapa_Zacatecas.html" target="_blank">Zacatecas</a></li>
+    <h2>Ubicación de Tabletas conectadas por Estado</h2>
 
+    <h3>ESTRUCTURA MORENA</h3>
+    <ul>
+      <li><a href="Mapa_Aguascalientes.html" target="_blank">Aguascalientes (39 tabletas)</a></li>
+      <li><a href="Mapa_Baja_California.html" target="_blank">Baja California (95 tabletas)</a></li>
+      <li><a href="Mapa_Ciudad_de_México.html" target="_blank">Ciudad de México (1724 tabletas)</a></li>
+      <li><a href="Mapa_Chiapas.html" target="_blank">Chiapas (289 tabletas)</a></li>
+      <li><a href="Mapa_Chihuahua.html" target="_blank">Chihuahua (142 tabletas)</a></li>
+      <li><a href="Mapa_Estado_de_México.html" target="_blank">Estado de México (2165 tabletas)</a></li>
+      <li><a href="Mapa_Guerrero.html" target="_blank">Guerrero (405 tabletas)</a></li>
+      <li><a href="Mapa_Hidalgo.html" target="_blank">Hidalgo (212 tabletas)</a></li>
+      <li><a href="Mapa_Michoacán.html" target="_blank">Michoacán (416 tabletas)</a></li>
+      <li><a href="Mapa_Oaxaca.html" target="_blank">Oaxaca (302 tabletas)</a></li>
+      <li><a href="Mapa_Puebla.html" target="_blank">Puebla (528 tabletas)</a></li>
+      <li><a href="Mapa_Querétaro.html" target="_blank">Querétaro (124 tabletas)</a></li>
+      <li><a href="Mapa_San_Luis_Potosí.html" target="_blank">San Luis Potosí (114 tabletas)</a></li>
+      <li><a href="Mapa_Sinaloa.html" target="_blank">Sinaloa (133 tabletas)</a></li>
+      <li><a href="Mapa_Sonora.html" target="_blank">Sonora (98 tabletas)</a></li>
+      <li><a href="Mapa_Tabasco.html" target="_blank">Tabasco (161 tabletas)</a></li>
+      <li><a href="Mapa_Tamaulipas.html" target="_blank">Tamaulipas (224 tabletas)</a></li>
+      <li><a href="Mapa_Veracruz.html" target="_blank">Veracruz (739 tabletas)</a></li>
+      <li><a href="Mapa_Yucatán.html" target="_blank">Yucatán (72 tabletas)</a></li>
+      <li><a href="Mapa_Zacatecas.html" target="_blank">Zacatecas (85 tabletas)</a></li>
+    </ul>
+
+    <h3>ESTRUCTURA REFERENTES</h3>
+    <ul>
+      <li><a href="mapas_referentes/Mapa_Baja_California.html" target="_blank">Baja California (1209 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Ciudad_de_México.html" target="_blank">Ciudad de México (5022 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Chiapas.html" target="_blank">Chiapas (822 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Chihuahua.html" target="_blank">Chihuahua (478 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Estado_de_México.html" target="_blank">Estado de México (6714 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Hidalgo.html" target="_blank">Hidalgo (429 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Michoacán.html" target="_blank">Michoacán (902 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Oaxaca.html" target="_blank">Oaxaca (655 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Puebla.html" target="_blank">Puebla (1120 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Querétaro.html" target="_blank">Querétaro (312 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_San_Luis_Potosí.html" target="_blank">San Luis Potosí (281 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Sinaloa.html" target="_blank">Sinaloa (264 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Sonora.html" target="_blank">Sonora (196 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Tabasco.html" target="_blank">Tabasco (320 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Tamaulipas.html" target="_blank">Tamaulipas (416 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Veracruz.html" target="_blank">Veracruz (1022 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Yucatán.html" target="_blank">Yucatán (212 tabletas)</a></li>
     </ul>
   </div>
 </section>
