--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -35,47 +34,31 @@
 
     <h3>ESTRUCTURA MORENA</h3>
     <ul>
-      <li><a href="Mapa_Aguascalientes.html" target="_blank">Aguascalientes (39 tabletas)</a></li>
-      <li><a href="Mapa_Baja_California.html" target="_blank">Baja California (95 tabletas)</a></li>
-      <li><a href="Mapa_Ciudad_de_México.html" target="_blank">Ciudad de México (1724 tabletas)</a></li>
-      <li><a href="Mapa_Chiapas.html" target="_blank">Chiapas (289 tabletas)</a></li>
-      <li><a href="Mapa_Chihuahua.html" target="_blank">Chihuahua (142 tabletas)</a></li>
-      <li><a href="Mapa_Estado_de_México.html" target="_blank">Estado de México (2165 tabletas)</a></li>
-      <li><a href="Mapa_Guerrero.html" target="_blank">Guerrero (405 tabletas)</a></li>
-      <li><a href="Mapa_Hidalgo.html" target="_blank">Hidalgo (212 tabletas)</a></li>
-      <li><a href="Mapa_Michoacán.html" target="_blank">Michoacán (416 tabletas)</a></li>
-      <li><a href="Mapa_Oaxaca.html" target="_blank">Oaxaca (302 tabletas)</a></li>
-      <li><a href="Mapa_Puebla.html" target="_blank">Puebla (528 tabletas)</a></li>
-      <li><a href="Mapa_Querétaro.html" target="_blank">Querétaro (124 tabletas)</a></li>
-      <li><a href="Mapa_San_Luis_Potosí.html" target="_blank">San Luis Potosí (114 tabletas)</a></li>
-      <li><a href="Mapa_Sinaloa.html" target="_blank">Sinaloa (133 tabletas)</a></li>
-      <li><a href="Mapa_Sonora.html" target="_blank">Sonora (98 tabletas)</a></li>
-      <li><a href="Mapa_Tabasco.html" target="_blank">Tabasco (161 tabletas)</a></li>
-      <li><a href="Mapa_Tamaulipas.html" target="_blank">Tamaulipas (224 tabletas)</a></li>
-      <li><a href="Mapa_Veracruz.html" target="_blank">Veracruz (739 tabletas)</a></li>
-      <li><a href="Mapa_Yucatán.html" target="_blank">Yucatán (72 tabletas)</a></li>
-      <li><a href="Mapa_Zacatecas.html" target="_blank">Zacatecas (85 tabletas)</a></li>
+      <li><a href="Mapa_Estado_de_México.html">Estado de México (2165 tabletas)</a></li>
+      <li><a href="Mapa_Ciudad_de_México.html">Ciudad de México (1724 tabletas)</a></li>
+      <li><a href="Mapa_Veracruz.html">Veracruz (739 tabletas)</a></li>
+      <li><a href="Mapa_Puebla.html">Puebla (528 tabletas)</a></li>
+      <li><a href="Mapa_Guerrero.html">Guerrero (405 tabletas)</a></li>
+      <li><a href="Mapa_Michoacán.html">Michoacán (416 tabletas)</a></li>
+      <li><a href="Mapa_Chiapas.html">Chiapas (289 tabletas)</a></li>
+      <li><a href="Mapa_Hidalgo.html">Hidalgo (212 tabletas)</a></li>
+      <li><a href="Mapa_Tamaulipas.html">Tamaulipas (224 tabletas)</a></li>
+      <li><a href="Mapa_Tablasco.html">Tabasco (161 tabletas)</a></li>
+      <!-- Agrega aquí los demás estados si los tienes -->
     </ul>
 
     <h3>ESTRUCTURA REFERENTES</h3>
     <ul>
-      <li><a href="mapas_referentes/Mapa_Baja_California.html" target="_blank">Baja California (1209 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Ciudad_de_México.html" target="_blank">Ciudad de México (5022 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Chiapas.html" target="_blank">Chiapas (822 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Chihuahua.html" target="_blank">Chihuahua (478 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Estado_de_México.html" target="_blank">Estado de México (6714 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Hidalgo.html" target="_blank">Hidalgo (429 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Michoacán.html" target="_blank">Michoacán (902 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Oaxaca.html" target="_blank">Oaxaca (655 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Puebla.html" target="_blank">Puebla (1120 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Querétaro.html" target="_blank">Querétaro (312 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_San_Luis_Potosí.html" target="_blank">San Luis Potosí (281 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Sinaloa.html" target="_blank">Sinaloa (264 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Sonora.html" target="_blank">Sonora (196 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Tabasco.html" target="_blank">Tabasco (320 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Tamaulipas.html" target="_blank">Tamaulipas (416 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Veracruz.html" target="_blank">Veracruz (1022 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Yucatán.html" target="_blank">Yucatán (212 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Estado_de_México.html">Estado de México (6714 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Ciudad_de_México.html">Ciudad de México (5022 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Veracruz.html">Veracruz (1022 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Puebla.html">Puebla (1120 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Michoacán.html">Michoacán (902 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Chiapas.html">Chiapas (822 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Hidalgo.html">Hidalgo (429 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Tamaulipas.html">Tamaulipas (416 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Tabasco.html">Tabasco (320 tabletas)</a></li>
+      <!-- Agrega aquí los demás estados si los tienes -->
     </ul>
   </div>
 </section>
@@ -84,3 +67,4 @@
 </footer>
 </body>
 </html>
+
