--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Dashboard Nacional de Tabletización</title>
+  <title>Dashboard Nacional de Tabletas Enroladas SUMATE</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body { font-family: 'Segoe UI', sans-serif; background-color: #f9f9f9; padding: 20px; }
@@ -19,7 +19,7 @@
 </head>
 <body>
 <header>
-  <h1>Dashboard Nacional de Tabletización</h1>
+  <h1>Dashboard Nacional de Tabletas Enroladas SUMATE</h1>
   <p>Movimiento de Regeneración Nacional (MORENA)</p>
 </header>
 <section>
@@ -44,7 +44,7 @@
       <li><a href="Mapa_Hidalgo.html">Hidalgo (212 tabletas)</a></li>
       <li><a href="Mapa_Tamaulipas.html">Tamaulipas (224 tabletas)</a></li>
       <li><a href="Mapa_Tablasco.html">Tabasco (161 tabletas)</a></li>
-      <!-- Agrega aquí los demás estados si los tienes -->
+      <li><a href="Mapa_Tablasco.html">Tamaulipas (222 tabletas)</a></li>
     </ul>
 
     <h3>ESTRUCTURA REFERENTES</h3>
