--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
       <li><a href="Mapa_Tamaulipas.html">Tamaulipas (224 tabletas)</a></li>
       <li><a href="Mapa_Tablasco.html">Tabasco (161 tabletas)</a></li>
       <li><a href="Mapa_Tablasco.html">Tamaulipas (222 tabletas)</a></li>
+      <li><a href="Mapa_Tablasco.html">Texas (1 tabletas)</a></li>
+      <li><a href="Mapa_Tablasco.html">Tlaxcala (68 tabletas)</a></li>
+      <li><a href="Mapa_Tablasco.html">Veracruz (517 tabletas)</a></li>
+      <li><a href="Mapa_Tablasco.html">Yucatán (124 tabletas)</a></li>
+      <li><a href="Mapa_Tablasco.html">Zacatecas (182 tabletas)</a></li>
     </ul>
 
     <h3>ESTRUCTURA REFERENTES</h3>
