--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
 
     <h3>ESTRUCTURA MORENA</h3>
     <ul>
+      <li><a href="Mapa_Aguascalientes.html">Aguascalientes (528 tabletas)</a></li>
+      <li><a href="Mapa_Baja California.html">Baja California (528 tabletas)</a></li>
+      <li><a href="Mapa_Baja California Sur.html">Baja California Sur (528 tabletas)</a></li>
+      <li><a href="Mapa_Campeche.html">Campeche (528 tabletas)</a></li>
+      <li><a href="Mapa_Chiapas.html">Chiapas (528 tabletas)</a></li>
+      <li><a href="Mapa_Chihuahua.html">Chihuahua (528 tabletas)</a></li>
+      <li><a href="Mapa_Coahuila.html">Coahuila (528 tabletas)</a></li>
+      <li><a href="Mapa_Puebla.html">Colima (528 tabletas)</a></li>
+      <li><a href="Mapa_Colima.html">Puebla (528 tabletas)</a></li>
+      <li><a href="Mapa_Desconocido.html">Altamar (1 tabletas)</a></li>
+      <li><a href="Mapa_Durango.html">Durango (528 tabletas)</a></li>
       <li><a href="Mapa_Estado_de_México.html">Estado de México (2165 tabletas)</a></li>
       <li><a href="Mapa_Ciudad_de_México.html">Ciudad de México (1724 tabletas)</a></li>
       <li><a href="Mapa_Veracruz.html">Veracruz (739 tabletas)</a></li>
@@ -43,13 +54,13 @@
       <li><a href="Mapa_Chiapas.html">Chiapas (289 tabletas)</a></li>
       <li><a href="Mapa_Hidalgo.html">Hidalgo (212 tabletas)</a></li>
       <li><a href="Mapa_Tamaulipas.html">Tamaulipas (224 tabletas)</a></li>
-      <li><a href="Mapa_Tablasco.html">Tabasco (161 tabletas)</a></li>
-      <li><a href="Mapa_Tablasco.html">Tamaulipas (222 tabletas)</a></li>
-      <li><a href="Mapa_Tablasco.html">Texas (1 tabletas)</a></li>
-      <li><a href="Mapa_Tablasco.html">Tlaxcala (68 tabletas)</a></li>
-      <li><a href="Mapa_Tablasco.html">Veracruz (517 tabletas)</a></li>
-      <li><a href="Mapa_Tablasco.html">Yucatán (124 tabletas)</a></li>
-      <li><a href="Mapa_Tablasco.html">Zacatecas (182 tabletas)</a></li>
+      <li><a href="Mapa_Tabasco.html">Tabasco (161 tabletas)</a></li>
+      <li><a href="Mapa_Tamaulipas.html">Tamaulipas (222 tabletas)</a></li>
+      <li><a href="Mapa_Texas.html">Texas (1 tabletas)</a></li>
+      <li><a href="Mapa_Tlaxcala.html">Tlaxcala (68 tabletas)</a></li>
+      <li><a href="Mapa_Veracruz.html">Veracruz (517 tabletas)</a></li>
+      <li><a href="Mapa_Yucatán.html">Yucatán (124 tabletas)</a></li>
+      <li><a href="Mapa_Zacatecas.html">Zacatecas (182 tabletas)</a></li>
     </ul>
 
     <h3>ESTRUCTURA REFERENTES</h3>
