--- a/index.html
+++ b/index.html
@@ -34,29 +34,36 @@
 
     <h3>ESTRUCTURA MORENA</h3>
     <ul>
-      <li><a href="Mapa_Aguascalientes.html">Aguascalientes (528 tabletas)</a></li>
-      <li><a href="Mapa_Baja California.html">Baja California (528 tabletas)</a></li>
-      <li><a href="Mapa_Baja California Sur.html">Baja California Sur (528 tabletas)</a></li>
-      <li><a href="Mapa_Campeche.html">Campeche (528 tabletas)</a></li>
-      <li><a href="Mapa_Chiapas.html">Chiapas (528 tabletas)</a></li>
-      <li><a href="Mapa_Chihuahua.html">Chihuahua (528 tabletas)</a></li>
-      <li><a href="Mapa_Coahuila.html">Coahuila (528 tabletas)</a></li>
-      <li><a href="Mapa_Puebla.html">Colima (528 tabletas)</a></li>
-      <li><a href="Mapa_Colima.html">Puebla (528 tabletas)</a></li>
+      <li><a href="Mapa_Aguascalientes.html">Aguascalientes (71 tabletas)</a></li>
+      <li><a href="Mapa_Baja California.html">Baja California (211 tabletas)</a></li>
+      <li><a href="Mapa_Baja California Sur.html">Baja California Sur (56 tabletas)</a></li>
+      <li><a href="Mapa_Campeche.html">Campeche (61 tabletas)</a></li>
+      <li><a href="Mapa_Chiapas.html">Chiapas (241 tabletas)</a></li>
+      <li><a href="Mapa_Chihuahua.html">Chihuahua (328 tabletas)</a></li>
+      <li><a href="Mapa_Coahuila.html">Coahuila (189 tabletas)</a></li>
+      <li><a href="Mapa_Colima.html">Colima (45 tabletas)</a></li>
       <li><a href="Mapa_Desconocido.html">Altamar (1 tabletas)</a></li>
-      <li><a href="Mapa_Durango.html">Durango (528 tabletas)</a></li>
-      <li><a href="Mapa_Estado_de_México.html">Estado de México (2165 tabletas)</a></li>
-      <li><a href="Mapa_Ciudad_de_México.html">Ciudad de México (1724 tabletas)</a></li>
-      <li><a href="Mapa_Veracruz.html">Veracruz (739 tabletas)</a></li>
-      <li><a href="Mapa_Puebla.html">Puebla (528 tabletas)</a></li>
-      <li><a href="Mapa_Guerrero.html">Guerrero (405 tabletas)</a></li>
-      <li><a href="Mapa_Michoacán.html">Michoacán (416 tabletas)</a></li>
-      <li><a href="Mapa_Chiapas.html">Chiapas (289 tabletas)</a></li>
-      <li><a href="Mapa_Hidalgo.html">Hidalgo (212 tabletas)</a></li>
-      <li><a href="Mapa_Tamaulipas.html">Tamaulipas (224 tabletas)</a></li>
-      <li><a href="Mapa_Tabasco.html">Tabasco (161 tabletas)</a></li>
+      <li><a href="Mapa_Durango.html">Durango (146 tabletas)</a></li>
+      <li><a href="Mapa_Estado_de_México.html">Estado de México (732 tabletas)</a></li>
+      <li><a href="Mapa_Ciudad_de_México.html">Ciudad de México (591 tabletas)</a></li>
+      <li><a href="Mapa_Guanajuato.html">Guanajuato (338 tabletas)</a></li>
+      <li><a href="Mapa_Guerrero.html">Guerrero (278 tabletas)</a></li>
+      <li><a href="Mapa_Hidalgo.html">Hidalgo (193 tabletas)</a></li>
+      <li><a href="Mapa_Jalisco.html">Jalisco (399 tabletas)</a></li>
+      <li><a href="Mapa_Michoacán.html">Michoacán (286 tabletas)</a></li>
+      <li><a href="Mapa_Morelos.html">Morelos (100 tabletas)</a></li>
+      <li><a href="Mapa_Nayarit.html">Nayarit (106 tabletas)</a></li>
+      <li><a href="Mapa_Nuevo León.html">Nuevo León (301 tabletas)</a></li>
+      <li><a href="Mapa_Oaxaca.html">Oaxaca (265 tabletas)</a></li>
+      <li><a href="Mapa_Puebla.html">Puebla (302 tabletas)</a></li>
+      <li><a href="Mapa_Querétaro.html">Querétaro (105 tabletas)</a></li>
+      <li><a href="Mapa_Quintana_Roo.html">Quintana_Roo (115 tabletas)</a></li>
+      <li><a href="Mapa_San Luis Potosí.html">San Luis Potosí (189 tabletas)</a></li>
+      <li><a href="Mapa_Sinaloa.html">Sinaloa (384 tabletas)</a></li>
+      <li><a href="Mapa_Sonora.html">Sonora (166 tabletas)</a></li>
+      <li><a href="Mapa_Tabasco.html">Tabasco (124 tabletas)</a></li>      
       <li><a href="Mapa_Tamaulipas.html">Tamaulipas (222 tabletas)</a></li>
-      <li><a href="Mapa_Texas.html">Texas (1 tabletas)</a></li>
+            <li><a href="Mapa_Texas.html">Texas (1 tabletas)</a></li>
       <li><a href="Mapa_Tlaxcala.html">Tlaxcala (68 tabletas)</a></li>
       <li><a href="Mapa_Veracruz.html">Veracruz (517 tabletas)</a></li>
       <li><a href="Mapa_Yucatán.html">Yucatán (124 tabletas)</a></li>
