--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <h3>ESTRUCTURA MORENA</h3>
     <ul>
       <li><a href="Mapa_Aguascalientes.html">Aguascalientes (71 tabletas)</a></li>
-      <li><a href="Mapa_Baja California.html">Baja California (211 tabletas)</a></li>
+      <li><a href="Mapa_Baja_California.html">Baja California (211 tabletas)</a></li>
       <li><a href="Mapa_Baja California Sur.html">Baja California Sur (56 tabletas)</a></li>
       <li><a href="Mapa_Campeche.html">Campeche (61 tabletas)</a></li>
       <li><a href="Mapa_Chiapas.html">Chiapas (241 tabletas)</a></li>
