--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <ul>
       <li><a href="Mapa_Aguascalientes.html">Aguascalientes (71 tabletas)</a></li>
       <li><a href="Mapa_Baja_California.html">Baja California (211 tabletas)</a></li>
-      <li><a href="Mapa_Baja California Sur.html">Baja California Sur (56 tabletas)</a></li>
+      <li><a href="Mapa_Baja_California_Sur.html">Baja California Sur (56 tabletas)</a></li>
       <li><a href="Mapa_Campeche.html">Campeche (61 tabletas)</a></li>
       <li><a href="Mapa_Chiapas.html">Chiapas (241 tabletas)</a></li>
       <li><a href="Mapa_Chihuahua.html">Chihuahua (328 tabletas)</a></li>
@@ -63,7 +63,7 @@
       <li><a href="Mapa_Sonora.html">Sonora (166 tabletas)</a></li>
       <li><a href="Mapa_Tabasco.html">Tabasco (124 tabletas)</a></li>      
       <li><a href="Mapa_Tamaulipas.html">Tamaulipas (222 tabletas)</a></li>
-            <li><a href="Mapa_Texas.html">Texas (1 tabletas)</a></li>
+      <li><a href="Mapa_Texas.html">Texas (1 tabletas)</a></li>
       <li><a href="Mapa_Tlaxcala.html">Tlaxcala (68 tabletas)</a></li>
       <li><a href="Mapa_Veracruz.html">Veracruz (517 tabletas)</a></li>
       <li><a href="Mapa_Yucatán.html">Yucatán (124 tabletas)</a></li>
