--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <h3>ESTRUCTURA MORENA</h3>
     <ul>
       <li><a href="Mapa_Aguascalientes.html">Aguascalientes (71 tabletas)</a></li>
-      <li><a href="Mapa_Baja_California.html">Baja California (211 tabletas)</a></li>
+      <li><a href="Mapa_Baja_California.html">c (211 tabletas)</a></li>
       <li><a href="Mapa_Baja_California_Sur.html">Baja California Sur (56 tabletas)</a></li>
       <li><a href="Mapa_Campeche.html">Campeche (61 tabletas)</a></li>
       <li><a href="Mapa_Chiapas.html">Chiapas (241 tabletas)</a></li>
@@ -72,17 +72,39 @@
 
     <h3>ESTRUCTURA REFERENTES</h3>
     <ul>
-      <li><a href="mapas_referentes/Mapa_Estado_de_México.html">Estado de México (6714 tabletas)</a></li>
+      <li><a href="mapas_referentes/Aguascalientes.html">Aguascalientes (6714 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Baja_California.html">Baja California (6714 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Baja_California_Sur.html">Baja California Sur (6714 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Campeche.html">Campeche (6714 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Chiapas.html">Chiapas (6714 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Chihuahua.html">Chihuahua (6714 tabletas)</a></li>
       <li><a href="mapas_referentes/Mapa_Ciudad_de_México.html">Ciudad de México (5022 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Veracruz.html">Veracruz (1022 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Puebla.html">Puebla (1120 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Michoacán.html">Michoacán (902 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Chiapas.html">Chiapas (822 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Coahuila.html">Coahuila (6714 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Colima.html">Colima (6714 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Durango.html">Durango (6714 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Estado_de_México.html">Estado de México (6714 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Guanajuato.html">Guanajuato (6714 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Guerrero.html">Guerrero (6714 tabletas)</a></li>
       <li><a href="mapas_referentes/Mapa_Hidalgo.html">Hidalgo (429 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Tamaulipas.html">Tamaulipas (416 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Jalisco.html">Jaliso (429 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Michoacán.html">Michoacán (902 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Morelos.html">Morelos (902 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Nayarit.html">Nayarit (902 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Nuevo_León.html">Nuevo León (902 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Oaxaca.html">Oaxaca (1022 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Puebla.html">Puebla (1120 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Querétaro.html">Querétaro (1120 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Quintana_Roo.html">Quintana Roo (1120 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Sinaloa.html">Sinaloa (1022 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Sonora.html">Sonora (1022 tabletas)</a></li>
       <li><a href="mapas_referentes/Mapa_Tabasco.html">Tabasco (320 tabletas)</a></li>
-      <!-- Agrega aquí los demás estados si los tienes -->
-    </ul>
+      <li><a href="mapas_referentes/Mapa_Tamaulipas.html">Tamaulipas (416 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Texas.html">Texas (416 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Tlaxcala.html">Tlaxcala (416 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Veracruz.html">Veracruz (1022 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Yucatán.html">Yucatán (1022 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Zacatecas.html">Zacatecas (1022 tabletas)</a></li>
+      </ul>
   </div>
 </section>
 <footer>
